feat(components): retain source files
Closes #38
